# biobouncer

./: .env.example  .gitattributes  .gitignore  .lintr  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  air.toml
.github/: CODEOWNERS  dependabot.yml  (+1 more)
demo/: README.md  biobouncer_python.ipynb  biobouncer_r.ipynb  pyproject.toml
demo/data/: associations.csv  identifiers.csv
pkg-py/: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
pkg-py/docs/: cli.md  examples.md  guide.md  index.md  reference.md  report.md  sources.md
pkg-py/docs/stylesheets/: extra.css
pkg-py/examples/: getting-started.ipynb
pkg-py/overrides/: main.html
pkg-py/src/biobouncer/: __init__.py  _cache.py  _deps.py  _fuzzy.py  _pattern.py  _registry.py  _remote.py  _result.py  checks.py  cli.py  core.py  gx.py  narwhals.py  report.py  schema.py  synthetic.py  types.py
pkg-py/src/biobouncer/_data/corpus/: bto.cases.jsonl  cdd.cases.jsonl  cl.cases.jsonl  clinvar.cases.jsonl  complexportal.cases.jsonl  dbsnp.cases.jsonl  drugbank.cases.jsonl  ec.cases.jsonl  eco.cases.jsonl  efo.cases.jsonl  ensembl.cases.jsonl  hgnc.cases.jsonl  hp.cases.jsonl  inchikey.cases.jsonl  mirbase_hairpin.cases.jsonl  mondo.cases.jsonl  mp.cases.jsonl  ncbitaxon.cases.jsonl  ncit.cases.jsonl  opentargets.cases.jsonl  orphanet.cases.jsonl  pato.cases.jsonl  pdb.cases.jsonl  pfam.cases.jsonl  prints.cases.jsonl  prosite.cases.jsonl  rfam.cases.jsonl  smart.cases.jsonl
pkg-py/src/biobouncer/_data/corpus/remote/: cdd.jsonl  chembl.jsonl  cl.jsonl  clinvar.jsonl  dbsnp.jsonl  doid.jsonl  efo.jsonl  ensembl.jsonl  hgvs.jsonl  hp.jsonl  interpro.jsonl  mirbase_hairpin.jsonl  mondo.jsonl  mp.jsonl  ncbifam.jsonl  ncbitaxon.jsonl  ncit.jsonl  opentargets.jsonl  pdb.jsonl  pfam.jsonl  prosite.jsonl  smart.jsonl  so.jsonl  uberon.jsonl  uniprot.jsonl
pkg-py/src/biobouncer/_data/fixtures/columns/: bto.cases.jsonl  chebi.cache.jsonl  cl.cases.jsonl  clinvar.cases.jsonl  dbsnp.cases.jsonl  doid.cache.jsonl  doid.cases.jsonl  ec.cases.jsonl  hgnc.cache.jsonl  inchikey.cases.jsonl  interpro.cases.jsonl  mondo.cache.jsonl  ncbifam.cases.jsonl  pato.cache.jsonl  pdb.cases.jsonl  reactome.cases.jsonl  refseq.cases.jsonl  rfam.cases.jsonl  so.cache.jsonl  uberon.cache.jsonl  uberon.cases.jsonl  uniprot.cases.jsonl
pkg-py/src/biobouncer/_data/fixtures/remote/chembl/lookup/: CHEMBL25.json
pkg-py/src/biobouncer/_data/fixtures/remote/clinvar/esearch/: VCV000012345.json  VCV999999999.json
pkg-py/src/biobouncer/_data/fixtures/remote/complexportal/complex/: CPX-2158.json  CPX-9999999.json
pkg-py/src/biobouncer/_data/fixtures/remote/dbsnp/refsnp/: rs3200542.json  rs334.json
pkg-py/src/biobouncer/_data/fixtures/remote/ensembl/id/: ENSG00000000000.json  ENSG00000139618.json  ENSRNOG00000010756.json
pkg-py/src/biobouncer/_data/fixtures/remote/genenames/symbol/: MLL.json  NOTAGENE.json  TP53.json
pkg-py/src/biobouncer/_data/fixtures/remote/interpro/cdd/: cd00029.json  cd99999.json
pkg-py/src/biobouncer/_data/fixtures/remote/interpro/interpro/: IPR000001.json  IPR000003.json
pkg-py/src/biobouncer/_data/fixtures/remote/interpro/ncbifam/: NF000001.json  TIGR00001.json  TIGR99999.json
pkg-py/src/biobouncer/_data/fixtures/remote/interpro/panther/: PTHR11003.json  PTHR99999.json
pkg-py/src/biobouncer/_data/fixtures/remote/interpro/pfam/: PF00001.json  PF00002.json  PF99999.json
pkg-py/src/biobouncer/_data/fixtures/remote/interpro/prints/: PR99999.json
pkg-py/src/biobouncer/_data/schema/: result.json
pkg-py/src/biobouncer/_data/snapshots/chebi/: sample.txt
pkg-py/src/biobouncer/_data/snapshots/doid/: sample.txt
pkg-py/src/biobouncer/_data/snapshots/hgnc/: sample.retired.tsv  sample.txt
pkg-py/src/biobouncer/_data/snapshots/mp/: sample.txt
pkg-py/src/biobouncer/_data/snapshots/uberon/: sample.txt
pkg-py/src/biobouncer/_data/sources/: bto.yaml  chembl.yaml  clinvar.yaml  cosmic.yaml  drugbank.yaml  ec.yaml  eco.yaml  efo.yaml  go.yaml  hgnc.yaml  hgvs.yaml  hp.yaml  inchikey.yaml  mirbase_hairpin.yaml  mp.yaml  ncbifam.yaml  ncbitaxon.yaml  orphanet.yaml  panther.yaml  pato.yaml  pfam.yaml  pharmgkb.yaml  prints.yaml  reactome.yaml  refseq.yaml  smart.yaml  uberon.yaml  wikipathways.yaml
pkg-py/src/biogate/: __init__.py  _cache.py  _deps.py  _pattern.py  _registry.py  _remote.py  _result.py  checks.py  cli.py  core.py  gx.py  narwhals.py  report.py  schema.py  types.py
pkg-py/src/biogate/_data/corpus/: cdd.cases.jsonl  chebi.cases.jsonl  chembl.cases.jsonl  doid.cases.jsonl  ensembl.cases.jsonl  go.cases.jsonl  interpro.cases.jsonl  mondo.cases.jsonl  ncbifam.cases.jsonl  pato.cases.jsonl  reactome.cases.jsonl  so.cases.jsonl  wikipathways.cases.jsonl
pkg-py/src/biogate/_data/corpus/remote/: ensembl.jsonl  panther.jsonl  pato.jsonl
pkg-py/src/biogate/_data/schema/: result.json
pkg-py/src/biogate/_data/snapshots/pato/: sample.txt
pkg-py/src/biogate/_data/sources/: bto.yaml  cl.yaml  cosmic.yaml  doid.yaml  efo.yaml  ensembl.yaml  go.yaml  hgnc.yaml  hgvs.yaml  interpro.yaml  mondo.yaml  mp.yaml  orphanet.yaml  pfam.yaml  reactome.yaml  so.yaml  uniparc.yaml  uniprot.yaml
pkg-py/tests/: test_api.py  test_cache.py  test_checks.py  test_cli.py  test_columns.py  test_concurrency.py  test_conformance.py  test_deps.py  test_existence.py  test_fuzzy.py  test_gx.py  test_hgvs.py  test_indeterminate.py  test_narwhals.py  test_pull.py  test_remote.py  test_remote_chembl.py  test_remote_clinvar.py  test_remote_complexportal.py  test_remote_conformance.py  test_remote_dbsnp.py  test_remote_hgvs.py  test_remote_interpro.py  test_remote_mirbase.py  test_remote_opentargets.py  test_remote_orphanet.py  test_remote_pdb.py  test_remote_pfam.py  test_remote_prosite.py  test_remote_reactome.py  test_remote_refseq.py  test_remote_rfam.py  test_remote_species.py  test_remote_uniparc.py  test_remote_wikipathways.py  test_report.py  test_retired.py  test_schema.py  test_smoke.py  test_species.py  (+2 more)
python/: README.md  pyproject.toml
python/src/biogate/: __init__.py
(+338 files in other folders)
