[build-system]
# 1.27 is the first release that understands the PEP 639 license fields below.
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "biobouncer"
version = "0.1.2"
description = "A gate for biological inputs: validate identifiers and inputs the same way in R and Python."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Samuel Bharti", email = "samuelbharti.io@gmail.com" }]
keywords = ["bioinformatics", "validation", "identifiers", "ontology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = ["platformdirs>=3", "pyyaml>=6"]

[project.optional-dependencies]
# Framework adapters. Install with: pip install biobouncer[adapters]
adapters = ["pydantic>=2", "pandera[pandas]>=0.20"]
# Great Expectations expectation. Install with: pip install biobouncer[gx]
gx = ["great-expectations>=1"]
# narwhals column check across pandas, polars, and pyarrow. Install with:
# pip install biobouncer[narwhals]
narwhals = ["narwhals>=2"]

[project.scripts]
biobouncer = "biobouncer.cli:main"

[project.urls]
Homepage = "https://github.com/samuelbharti/biobouncer"
Documentation = "https://www.samuelbharti.com/biobouncer/py/"
Source = "https://github.com/samuelbharti/biobouncer"
Issues = "https://github.com/samuelbharti/biobouncer/issues"
Changelog = "https://github.com/samuelbharti/biobouncer/blob/main/pkg-py/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15",
    "pydantic>=2",
    "pandera[pandas]>=0.20",
    "great-expectations>=1",
    "narwhals>=2",
    "polars>=1",
    "pyarrow>=15",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[tool.hatch.build.targets.wheel]
packages = ["src/biobouncer"]

# List the sdist contents rather than letting hatchling infer them. The build root
# is pkg-py/, but the only .gitignore is at the repository root, and its
# `pkg-py/site/` rule is path-anchored: read from pkg-py/ it means
# `pkg-py/pkg-py/site/` and matches nothing, so the built docs site leaked into
# the sdist. An explicit list does not depend on where a rule is anchored.
[tool.hatch.build.targets.sdist]
include = [
    "src/biobouncer",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear.
select = ["E", "F", "W", "I", "UP", "B"]
# Line length is handled by the formatter.
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["biobouncer"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
docstring-code-format = true
