[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biogate"
version = "0.1.0.dev0"
description = "A gate for biological inputs: validate identifiers and inputs the same way in R and Python."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Samuel Bharti", email = "samuelbharti.io@gmail.com" }]
keywords = ["bioinformatics", "validation", "identifiers", "ontology"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/samuelbharti/biogate"
Issues = "https://github.com/samuelbharti/biogate/issues"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.15"]

[tool.hatch.build.targets.wheel]
packages = ["src/biogate"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear.
select = ["E", "F", "W", "I", "UP", "B"]
# Line length is handled by the formatter.
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["biogate"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
docstring-code-format = true
